--- a/VoiceAgents/requirements.txt
+++ b/VoiceAgents/requirements.txt
@@ -6,12 +6,31 @@
 # Due to the wide diversity of platforms and environments, DeepLearning does not explicitly support running locally. However, if you encounter
 # issues, the course support channel is a good place to ask questions.
 
-
 # python 3.10.11
 
-livekit-agents[openai, silero, elevenlabs]==1.0.11
+# Core LiveKit dependencies
+livekit-agents[openai,silero,elevenlabs]==1.0.11
+livekit-api>=1.0.2
+livekit>=1.0.3
+livekit-protocol~=1.0
+
+# Web framework and server
 fastapi==0.115.8
 uvicorn==0.34.0
+
+# Environment and configuration
 python-dotenv==1.0.1
+
+# HTTP client
 httpx==0.28.1
+
+# Audio processing and sound device management
+sounddevice>=0.5
+soundfile>=0.12.0
+numpy>=1.26.0
+
+# Development and debugging
 ipython==8.13.2
+
+# Standard library imports (included for completeness, no installation needed):
+# logging, asyncio, os, time, json, datetime, typing, re, dataclasses, pathlib
